# polyedge

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.frontend  Dockerfile.research-validation  Dockerfile.rust  Dockerfile.venue-probe  README.md  pyproject.toml
crates/polyedge-api/: Cargo.toml
crates/polyedge-api/src/: azure_jobs.rs  history.rs  labs.rs  lib.rs  query.rs  runtime.rs
crates/polyedge-api/src/query/: catalog.rs
crates/polyedge-api/src/runtime/: execution_intent.rs  execution_quality.rs  recorder.rs  reference.rs  view.rs
crates/polyedge-api/tests/: smoke.rs
crates/polyedge-feeds/: Cargo.toml
crates/polyedge-feeds/src/: discovery.rs  lib.rs  streams.rs  util.rs
crates/polyedge-reporting/: Cargo.toml
crates/polyedge-reporting/src/: lib.rs  research.rs
crates/polyedge-reporting/src/research/: labs.rs  loss_diagnostics.rs  loss_regime_oos.rs  projected_cache.rs  run_bundle.rs
crates/polyedge-reporting/src/research/labs/: config.rs
crates/polyedge-reporting/tests/: parity.rs  projected_cache.rs  research.rs  run_bundle.rs
data_quality/: exclusion_windows.yaml
docs/: api-access.md  azure-deployment.md  azure-research-automation-and-labs-dashboard.md  backtesting.md  chainlink-source.md  execution-quality-limitations.md  polyedge-offline-research-investigation-2026-06-14.md  polyedge-remaining-implementation-plan.md  polyedge-workbench-overhaul-plan.md  postman.md  profitability-promotion.md  research-regime-codex-guide.md  rust-migration-codex-guide.md  rust-migration-status.md  strategy.md
frontend/: .env.example  README.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
infra/: bicepconfig.json  main.bicep  monitoring-alerts.bicep  shadow-lossdiag-validation.bicep  venue-probe.bicep
(+177 files in other folders)
