[package]
name = "polyedge-feeds"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
futures-util.workspace = true
polyedge-config.workspace = true
polyedge-domain.workspace = true
regex.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
ureq.workspace = true
url.workspace = true
