[package]
name = "polyedge-reporting"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
flate2 = "1.1"
polyedge-config.workspace = true
polyedge-domain.workspace = true
polyedge-engine.workspace = true
polyedge-storage.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
